css/shared.css
/* Reset CSS Properties */

* {
    font-family: 'Bebas Neue', sans-serif;
    color: #FFFFFF;
}

body {
    background-color: #1B1B1B !important;
    width: 100%;
    height: 100vh;
    background-image: url(../imgs/background-lines.svg);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

a {
    text-decoration: none!important;
}

.hidden {
    display: none!important;
}

/* Header Properties */

.lvlx-header {
    padding: 0;
    margin: 0;
    height: 80px;
    width: 100%;
    background-color: #212121;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;    
    justify-content: space-between;
    align-content: center;
    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.49);
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
}

.lvlx-header-hamburger-container {
    width: 50px;
    height: 50px;
    margin-left: 1rem;
    cursor: pointer;
}

.lvlx-header-hamburger {
    width: 50px;
    height: 50px;
}

.lvlx-header-logo-container {
    height: 50px;
    aspect-ratio: 180/50;
}
.lvlx-header-logo {
    width: 100%;
    height: 100%;
    object-fit: contain;
    cursor: pointer;
}

.lvlx-header-back-button-container {
    width: 50px;
    height: 50px;
    margin-right: 1rem;
    padding: 5px;
}

.lvlx-header-back-button {
    width: 100%;
    height: 100%;
    cursor: pointer;
    display: none;
}

.lvlx-header-back-button-link.visible>.lvlx-header-back-button {
    display: inline-block;
}

/* Cards */

.lvlx-cards-container {
    width: 100%;
    height: fit-content;
    margin: 0;
    padding: 24px 0 0 0;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.lvlx-card-row {
    width: 100%;
    height: fit-content;
    margin: 0 0 24px 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.lvlx-card {
    width: 95%;
    display: flex;
    flex-direction: row;
    border-radius: 11px;
    background-color: #212121;
    padding: 16px;
    box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.5);
}

.lvlx-card-icon {
    width: 30%;
    aspect-ratio: 1/1;
    object-fit: contain;
}

.lvlx-card-text-container {
    width: 70%;
    height: 100%;
    margin-left: 10px;
}

.lvlx-card-title {
    width: 100%;
    height: fit-content;
    font-size: 6vw;
    line-height: 5.2vw;
    text-align: center;
    text-transform: uppercase!important;
}

.lvlx-card-description {
    width: 100%;
    height: calc(100% - 16px);
    overflow: hidden;
}

